@@ -1,9 +1,17 @@
 <h3>What's new</h3>
 
 <p>
-	<strong>Login with Spotify</strong>.
+	<strong>Login with Amazon</strong>. Contributed by @neo191987, slightly modified and documented by us.
+</p>
+
+<p>
+	<strong>Login with Spotify</strong>. Contributed by @neo191987, slightly modified and documented by us.
 </p>
 
 <p>
 	<strong>Bug fixes and minor improvements</strong>. Please take a look at the CHANGELOG below.
+</p>
+
+<p>
+	We would like to acknowledge the hard work of and extend our gratitude to GitHub user @neo191987 who graciously contributed the new integration plugins included in this version of SocialLogin. You rock!
 </p>
