@@ -24,6 +24,7 @@
     <files>
         <file type="plugin" group="system" id="sociallogin">plg_system_sociallogin.zip</file>
 
+        <file type="plugin" group="sociallogin" id="amazon">plg_sociallogin_amazon.zip</file>
         <file type="plugin" group="sociallogin" id="apple">plg_sociallogin_apple.zip</file>
         <file type="plugin" group="sociallogin" id="discord">plg_sociallogin_discord.zip</file>
         <file type="plugin" group="sociallogin" id="facebook">plg_sociallogin_facebook.zip</file>
