@@ -1,0 +1,6 @@
+;; @package   AkeebaSocialLogin
+;; @copyright Copyright (c)2016-2023 Nicholas K. Dionysopoulos / Akeeba Ltd
+;; @license   GNU General Public License version 3, or later
+
+PLG_SOCIALLOGIN_AMAZON="Akeeba Social Login - Amazon integration"
+PLG_SOCIALLOGIN_AMAZON_DESCRIPTION="Allows social login with Amazon accounts."
